check_error.log
    Checking compactrs v2025.12.22 (C:\Users\ireddragonicy\RustroverProjects\compactrs)
error[E0425]: cannot find type `WPARAM` in this scope
   --> src\ui\wrappers.rs:249:13
    |
249 |     wparam: WPARAM,
    |             ^^^^^^ not found in this scope

error[E0425]: cannot find type `LPARAM` in this scope
   --> src\ui\wrappers.rs:250:13
    |
250 |     lparam: LPARAM,
    |             ^^^^^^ not found in this scope

error[E0425]: cannot find type `LRESULT` in this scope
   --> src\ui\wrappers.rs:253:6
    |
253 | ) -> LRESULT {
    |      ^^^^^^^ not found in this scope

error[E0425]: cannot find type `LRESULT` in this scope
   --> src\ui\wrappers.rs:285:60
    |
285 | ...                   return CDRF_NOTIFYITEMDRAW as LRESULT;
    |                                                     ^^^^^^^ not found in this scope

error[E0425]: cannot find type `LRESULT` in this scope
   --> src\ui\wrappers.rs:290:53
    |
290 | ...                   return CDRF_NEWFONT as LRESULT;
    |                                              ^^^^^^^ not found in this scope

warning: unused import: `crate::ui::state::AppTheme`
 --> src\ui\dialogs\watcher.rs:3:5
  |
3 | use crate::ui::state::AppTheme;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `RECT`
  --> src\ui\dialogs\watcher.rs:10:69
   |
10 | use windows_sys::Win32::Foundation::{HWND, LPARAM, LRESULT, WPARAM, RECT};
   |                                                                     ^^^^

warning: unused imports: `CBN_SELCHANGE`, `IDYES`, `MB_ICONQUESTION`, `MB_YESNO`, and `WM_NOTIFY`
  --> src\ui\dialogs\watcher.rs:12:17
   |
12 |     WM_COMMAND, WM_NOTIFY,
   |                 ^^^^^^^^^
13 |     BN_CLICKED, CBN_SELCHANGE,
   |                 ^^^^^^^^^^^^^
14 |     DestroyWindow, MessageBoxW, SendMessageW,
15 |     MB_ICONERROR, MB_OK, MB_ICONQUESTION, MB_YESNO, IDYES,
   |                          ^^^^^^^^^^^^^^^  ^^^^^^^^  ^^^^^

warning: unused imports: `LVM_DELETEITEM` and `NMHDR`
  --> src\ui\dialogs\watcher.rs:17:40
   |
17 | use windows_sys::Win32::UI::Controls::{LVM_DELETEITEM, LVM_GETITEMCOUNT, NMHDR};
   |                                        ^^^^^^^^^^^^^^                    ^^^^^

warning: unused import: `std::rc::Rc`
  --> src\ui\dialogs\watcher.rs:19:5
   |
19 | use std::rc::Rc;
   |     ^^^^^^^^^^^

warning: unused import: `std::cell::RefCell`
  --> src\ui\dialogs\watcher.rs:20:5
   |
20 | use std::cell::RefCell;
   |     ^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\ui\window.rs:90:13
   |
90 |         let mut loaded_tasks = crate::watcher_config::WatcherConfig::load();
   |             ----^^^^^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `lparam`
   --> src\ui\dialogs\watcher.rs:182:68
    |
182 |     fn on_message(&mut self, hwnd: HWND, msg: u32, wparam: WPARAM, lparam: LPARAM) -> Option<LRESULT> {
    |                                                                    ^^^^^^ help: if this is intentional, prefix it with an underscore: `_lparam`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `sel`
   --> src\ui\dialogs\watcher.rs:209:38
    |
209 | ...                   let sel = lv.get_selection_mark(); // This is just focus, need actual selection
    |                           ^^^ help: if this is intentional, prefix it with an underscore: `_sel`

warning: unused variable: `checked`
   --> src\ui\dialogs\watcher.rs:242:37
    |
242 | ...                   let checked = Button::new(h_chk).is_checked();
    |                           ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_checked`

warning: unused variable: `current_theme`
   --> src\ui\handlers.rs:381:9
    |
381 |     let current_theme = st.theme;
    |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_current_theme`

For more information about this error, try `rustc --explain E0425`.
warning: `compactrs` (bin "compactrs") generated 11 warnings
error: could not compile `compactrs` (bin "compactrs") due to 5 previous errors; 11 warnings emitted
